# slopandmop

./: .gitignore  Cargo.toml  README.md  bake.sh
.github/workflows/: deploy-factory.yml  deploy.yml  image.yml  release.yml
image/overlay/opt/sm-seed/: CLAUDE.md
image/overlay/opt/sm-seed/commands/: deploy-openclaw.md  status.md  teardown.md
image/targets/gcp-sm/: profile.env
ollama/: workload.preview.json
openclaw/: workload.json.tmpl
podman-bootstrap/: workload.json
podman-static/: workload.json
src/: agent.rs  config.rs  cookie.rs  ee_config.rs  factory.rs  gcloud.rs  ita.rs  main.rs  provision_workload.rs  register.rs  watchdog.rs
workloads/mount-models/: workload.json
workloads/nv/: workload.json
workloads/ollama/: workload.prod.json
