[package]
name = "smctl"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "smctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }
